--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 
 	<properties>
-		<jetty.version>6.1.4</jetty.version>
+		<jetty.version>9.2.7.v20150116</jetty.version>
 	</properties>
 
 	<dependencies>
@@ -117,8 +117,9 @@
 
 			<!-- Plugin to run and test through maven -->
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty.version}</version>
 				<configuration>
 					<scanIntervalSeconds>3</scanIntervalSeconds>
 				</configuration>
@@ -142,18 +143,13 @@
 					<path>/${project.build.finalName}</path>
 				</configuration>
 			</plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.4</version>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals><goal>copy-dependencies</goal></goals>
-          </execution>
-           <execution>
+  <!-- PARA EXECUTAR NO HEROKU -->
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <version>2.3</version>
+    <executions>
+        <execution>
             <phase>package</phase>
             <goals><goal>copy</goal></goals>
             <configuration>
@@ -161,14 +157,14 @@
                     <artifactItem>
                         <groupId>org.eclipse.jetty</groupId>
                         <artifactId>jetty-runner</artifactId>
-                        <version>9.2.7.v20150116</version>
+                        <version>${jetty.version}</version>
                         <destFileName>jetty-runner.jar</destFileName>
                     </artifactItem>
                 </artifactItems>
             </configuration>
         </execution>
-        </executions>
-      </plugin>
+    </executions>
+</plugin>
 
 		</plugins>
 	</build>
