Setting Postgresql compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,20 @@
 
 	<dependencies>
 
+    <!-- FROM HEROKU -->
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4-1201-jdbc4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.heroku.sdk</groupId>
+      <artifactId>heroku-jdbc</artifactId>
+      <version>0.1.1</version>
+    </dependency>
+
+
 		<!-- JSF Dependencies -->
 
 		<dependency>
