--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,13 @@
       <version>0.1.1</version>
     </dependency>
 
-
+  <!-- LOGGING -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.6.4</version>
+    </dependency>
+    
 		<!-- JSF Dependencies -->
 
 		<dependency>
