--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
       <version>0.1.1</version>
     </dependency>
 
-  <!-- LOGGING -->
+  <!-- LOGGING  NAO NECESSARIO JA EXISTE NO  weld-servlet-1.0.1-Final
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.6.4</version>
-    </dependency>
+    </dependency>-->
     
 		<!-- JSF Dependencies -->
 
