Setting Postgresql compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,13 @@
 
 		<!-- JPA Persistence Dependencies -->
   
-		<!-- <dependency>
+    <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.5.0-Beta-2</version>
 			<scope>compile</scope>
 		</dependency>
- -->
+ 
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
